feat: add search using coordinates
